// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`seo snapshots > matches heritage metadata snapshot for ru and uz > heritage-metadata-ru 1`] = `
{
  "alternates": {
    "canonical": "/ru/heritage/sample-slug",
    "languages": {
      "ru": "https://example.com/ru/heritage/sample-slug",
      "uz": "https://example.com/uz/heritage/sample-slug",
      "x-default": "https://example.com/ru/heritage/sample-slug",
    },
  },
  "applicationName": "Project",
  "description": "D",
  "formatDetection": {
    "address": false,
    "email": false,
    "telephone": false,
  },
  "keywords": [
    "Project",
    "Архитектурное наследие Ферганы",
    "Фергана",
    "архитектурное наследие",
    "исторические здания",
    "достопримечательности Ферганы",
    "виртуальный тур",
    "памятник архитектуры",
    "история здания",
    "аудиогид",
  ],
  "openGraph": {
    "alternateLocale": [
      "uz_UZ",
    ],
    "description": "D",
    "locale": "ru_RU",
    "siteName": "Project",
    "title": "T",
    "type": "article",
    "url": "https://example.com/ru/heritage/sample-slug",
  },
  "publisher": "Project",
  "referrer": "origin-when-cross-origin",
  "robots": {
    "follow": true,
    "googleBot": {
      "follow": true,
      "index": true,
    },
    "index": true,
  },
  "title": "T",
  "twitter": {
    "card": "summary_large_image",
    "description": "D",
    "title": "T",
  },
}
`;

exports[`seo snapshots > matches heritage metadata snapshot for ru and uz > heritage-metadata-uz 1`] = `
{
  "alternates": {
    "canonical": "/uz/heritage/sample-slug",
    "languages": {
      "ru": "https://example.com/ru/heritage/sample-slug",
      "uz": "https://example.com/uz/heritage/sample-slug",
      "x-default": "https://example.com/ru/heritage/sample-slug",
    },
  },
  "applicationName": "Project",
  "description": "D",
  "formatDetection": {
    "address": false,
    "email": false,
    "telephone": false,
  },
  "keywords": [
    "Project",
    "Farg'ona merosi",
    "Farg'ona",
    "me'moriy meros",
    "tarixiy binolar",
    "Farg'ona diqqatga sazovor joylari",
    "virtual sayohat",
    "me'moriy yodgorlik",
    "bino tarixi",
    "audio guide",
  ],
  "openGraph": {
    "alternateLocale": [
      "ru_RU",
    ],
    "description": "D",
    "locale": "uz_UZ",
    "siteName": "Project",
    "title": "T",
    "type": "article",
    "url": "https://example.com/uz/heritage/sample-slug",
  },
  "publisher": "Project",
  "referrer": "origin-when-cross-origin",
  "robots": {
    "follow": true,
    "googleBot": {
      "follow": true,
      "index": true,
    },
    "index": true,
  },
  "title": "T",
  "twitter": {
    "card": "summary_large_image",
    "description": "D",
    "title": "T",
  },
}
`;

exports[`seo snapshots > matches home metadata snapshot for ru and uz > home-metadata-ru 1`] = `
{
  "alternates": {
    "canonical": "/ru",
    "languages": {
      "ru": "https://example.com/ru",
      "uz": "https://example.com/uz",
      "x-default": "https://example.com/ru",
    },
  },
  "applicationName": "Project",
  "description": "D",
  "formatDetection": {
    "address": false,
    "email": false,
    "telephone": false,
  },
  "keywords": [
    "Project",
    "Архитектурное наследие Ферганы",
    "Фергана",
    "архитектурное наследие",
    "исторические здания",
    "достопримечательности Ферганы",
    "виртуальный тур",
    "культурное наследие",
    "XIX век",
    "XX век",
  ],
  "openGraph": {
    "alternateLocale": [
      "uz_UZ",
    ],
    "description": "D",
    "locale": "ru_RU",
    "siteName": "Project",
    "title": "T",
    "type": "website",
    "url": "https://example.com/ru",
  },
  "publisher": "Project",
  "referrer": "origin-when-cross-origin",
  "robots": {
    "follow": true,
    "googleBot": {
      "follow": true,
      "index": true,
    },
    "index": true,
  },
  "title": "T",
  "twitter": {
    "card": "summary_large_image",
    "description": "D",
    "title": "T",
  },
}
`;

exports[`seo snapshots > matches home metadata snapshot for ru and uz > home-metadata-uz 1`] = `
{
  "alternates": {
    "canonical": "/uz",
    "languages": {
      "ru": "https://example.com/ru",
      "uz": "https://example.com/uz",
      "x-default": "https://example.com/ru",
    },
  },
  "applicationName": "Project",
  "description": "D",
  "formatDetection": {
    "address": false,
    "email": false,
    "telephone": false,
  },
  "keywords": [
    "Project",
    "Farg'ona merosi",
    "Farg'ona",
    "me'moriy meros",
    "tarixiy binolar",
    "Farg'ona diqqatga sazovor joylari",
    "virtual sayohat",
    "madaniy meros",
    "XIX asr",
    "XX asr",
  ],
  "openGraph": {
    "alternateLocale": [
      "ru_RU",
    ],
    "description": "D",
    "locale": "uz_UZ",
    "siteName": "Project",
    "title": "T",
    "type": "website",
    "url": "https://example.com/uz",
  },
  "publisher": "Project",
  "referrer": "origin-when-cross-origin",
  "robots": {
    "follow": true,
    "googleBot": {
      "follow": true,
      "index": true,
    },
    "index": true,
  },
  "title": "T",
  "twitter": {
    "card": "summary_large_image",
    "description": "D",
    "title": "T",
  },
}
`;

exports[`seo snapshots > matches structured data snapshots for ru and uz > detail-jsonld-ru 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@id": "https://example.com/ru/heritage/sample-slug#breadcrumb",
      "@type": "BreadcrumbList",
      "itemListElement": [
        {
          "@type": "ListItem",
          "item": "https://example.com/ru",
          "name": "Главная",
          "position": 1,
        },
        {
          "@type": "ListItem",
          "item": "https://example.com/ru#objects",
          "name": "Объекты",
          "position": 2,
        },
        {
          "@type": "ListItem",
          "item": "https://example.com/ru/heritage/sample-slug",
          "name": "Храм преподобного Сергия Радонежского",
          "position": 3,
        },
      ],
    },
    {
      "@id": "https://example.com/ru/heritage/sample-slug#heritage",
      "@type": "LandmarksOrHistoricalBuildings",
      "address": {
        "@type": "PostalAddress",
        "streetAddress": "Узбекистан, г. Фергана, ул. Саккокий, 8.",
      },
      "description": "В настоящее время объект является действующим православным храмом Ташкентской и Узбекистанской епархии. Он выполняет богослужебную, мемориальную, просветительскую и общинную функции, оставаясь одним из ключевых духовных центров Ферганской долины. Ранее здание было построено как кирха для лютеранской общины, а в советский период временно использовалось не по первоначальному назначению, а как складское помещение.",
      "image": [
        "https://cdn.ruwiki.ru/commonswiki/files/thumb/5/55/Church_of_St._Sergiuy_Radonezhkogo_in_Fergana_02-01.jpg/600px-Church_of_St._Sergiuy_Radonezhkogo_in_Fergana_02-01.jpg",
        "https://sobory.ru/pic/45600/45639_20260317_1021100t.jpg",
        "https://sobory.ru/pic/45600/45639_20260317_1021103t.jpg",
        "https://sobory.ru/pic/45600/45639_20260317_1021102t.jpg",
        "https://upload.wikimedia.org/wikipedia/commons/5/55/Church_of_St._Sergiuy_Radonezhkogo_in_Fergana_02-01.jpg",
        "https://upload.wikimedia.org/wikipedia/commons/5/59/%D0%A5%D1%80%D0%B0%D0%BC_%D0%BF%D1%80%D0%B5%D0%BF%D0%BE%D0%B4%D0%BE%D0%B1%D0%BD%D0%BE%D0%B3%D0%BE_%D0%A1%D0%B5%D1%80%D0%B3%D0%B8%D1%8F_%D0%A0%D0%B0%D0%B4%D0%BE%D0%BD%D0%B5%D0%B6%D1%81%D0%BA%D0%BE%D0%B3%D0%BE_%28%D0%A4%D0%B5%D1%80%D0%B3%D0%B0%D0%BD%D0%B0%29_%D1%84%D0%BE%D1%82%D0%BE_1..JPG",
        "https://sobory.ru/pic/45600/45639_20190331_064603t.jpg",
        "https://upload.wikimedia.org/wikipedia/commons/a/a3/Church_of_St._Sergiuy_Radonezhkogo_in_Fergana_01-03.JPG",
        "https://upload.wikimedia.org/wikipedia/ru/0/0c/Iulianiya_Sokolova.jpg",
      ],
      "isPartOf": {
        "@id": "https://example.com/#website",
      },
      "name": "Храм преподобного Сергия Радонежского",
      "url": "https://example.com/ru/heritage/sample-slug",
    },
  ],
}
`;

exports[`seo snapshots > matches structured data snapshots for ru and uz > detail-jsonld-uz 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@id": "https://example.com/uz/heritage/sample-slug#breadcrumb",
      "@type": "BreadcrumbList",
      "itemListElement": [
        {
          "@type": "ListItem",
          "item": "https://example.com/uz",
          "name": "Bosh sahifa",
          "position": 1,
        },
        {
          "@type": "ListItem",
          "item": "https://example.com/uz#objects",
          "name": "Ob'ektlar",
          "position": 2,
        },
        {
          "@type": "ListItem",
          "item": "https://example.com/uz/heritage/sample-slug",
          "name": "Muqaddas Sergiy Radonejskiy cherkovi",
          "position": 3,
        },
      ],
    },
    {
      "@id": "https://example.com/uz/heritage/sample-slug#heritage",
      "@type": "LandmarksOrHistoricalBuildings",
      "address": {
        "@type": "PostalAddress",
        "streetAddress": "O'zbekiston, Farg'ona, ko'ch. Sakkokiy, 8.",
      },
      "description": "Ayni paytda bino Toshkent va Oʻzbekiston yeparxiyasining pravoslav cherkovi boʻlib xizmat qilmoqda. U Farg‘ona vodiysining asosiy ma’naviy markazlaridan biri bo‘lib qolgan holda liturgik, yodgorlik, ma’rifiy va jamoat vazifalarini bajaradi. Ilgari bino Lyuteran cherkovi vazifasini bajargan, sovet davrida esa vaqtinchalik asl maqsadi uchun emas, balki ombor sifatida foydalanilgan",
      "image": [
        "https://cdn.ruwiki.ru/commonswiki/files/thumb/5/55/Church_of_St._Sergiuy_Radonezhkogo_in_Fergana_02-01.jpg/600px-Church_of_St._Sergiuy_Radonezhkogo_in_Fergana_02-01.jpg",
        "https://sobory.ru/pic/45600/45639_20260317_1021100t.jpg",
        "https://sobory.ru/pic/45600/45639_20260317_1021103t.jpg",
        "https://sobory.ru/pic/45600/45639_20260317_1021102t.jpg",
        "https://upload.wikimedia.org/wikipedia/commons/5/55/Church_of_St._Sergiuy_Radonezhkogo_in_Fergana_02-01.jpg",
        "https://upload.wikimedia.org/wikipedia/commons/5/59/%D0%A5%D1%80%D0%B0%D0%BC_%D0%BF%D1%80%D0%B5%D0%BF%D0%BE%D0%B4%D0%BE%D0%B1%D0%BD%D0%BE%D0%B3%D0%BE_%D0%A1%D0%B5%D1%80%D0%B3%D0%B8%D1%8F_%D0%A0%D0%B0%D0%B4%D0%BE%D0%BD%D0%B5%D0%B6%D1%81%D0%BA%D0%BE%D0%B3%D0%BE_%28%D0%A4%D0%B5%D1%80%D0%B3%D0%B0%D0%BD%D0%B0%29_%D1%84%D0%BE%D1%82%D0%BE_1..JPG",
        "https://sobory.ru/pic/45600/45639_20190331_064603t.jpg",
        "https://upload.wikimedia.org/wikipedia/commons/a/a3/Church_of_St._Sergiuy_Radonezhkogo_in_Fergana_01-03.JPG",
        "https://upload.wikimedia.org/wikipedia/ru/0/0c/Iulianiya_Sokolova.jpg",
      ],
      "isPartOf": {
        "@id": "https://example.com/#website",
      },
      "name": "Muqaddas Sergiy Radonejskiy cherkovi",
      "url": "https://example.com/uz/heritage/sample-slug",
    },
  ],
}
`;

exports[`seo snapshots > matches structured data snapshots for ru and uz > home-jsonld-ru 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@id": "https://example.com/#organization",
      "@type": "Organization",
      "name": "Project",
      "url": "https://example.com",
    },
    {
      "@id": "https://example.com/#website",
      "@type": "WebSite",
      "description": "D",
      "inLanguage": "ru",
      "name": "Project",
      "publisher": {
        "@id": "https://example.com/#organization",
      },
      "url": "https://example.com",
    },
    {
      "@id": "https://example.com/ru#webpage",
      "@type": "WebPage",
      "description": "D",
      "inLanguage": "ru",
      "isPartOf": {
        "@id": "https://example.com/#website",
      },
      "mainEntity": {
        "@id": "https://example.com/ru#heritage-itemlist",
      },
      "name": "Project",
      "publisher": {
        "@id": "https://example.com/#organization",
      },
      "url": "https://example.com/ru",
    },
    {
      "@id": "https://example.com/ru#heritage-itemlist",
      "@type": "ItemList",
      "itemListElement": [
        {
          "@type": "ListItem",
          "item": {
            "@type": "LandmarksOrHistoricalBuildings",
            "description": "В настоящее время объект является действующим православным храмом Ташкентской и Узбекистанской епархии. Он выполняет богослужебную, мемориальную, просветительскую и общинную функции, оставаясь одним из ключевых духовных центров Ферганской долины. Ранее здание было построено как кирха для лютеранской общины, а в советский период временно использовалось не по первоначальному назначению, а как складское помещение.",
            "image": "https://cdn.ruwiki.ru/commonswiki/files/thumb/5/55/Church_of_St._Sergiuy_Radonezhkogo_in_Fergana_02-01.jpg/600px-Church_of_St._Sergiuy_Radonezhkogo_in_Fergana_02-01.jpg",
            "name": "Храм преподобного Сергия Радонежского",
            "url": "https://example.com/ru/heritage/khram-sergiya-radonezhskogo",
          },
          "position": 1,
        },
        {
          "@type": "ListItem",
          "item": {
            "@type": "LandmarksOrHistoricalBuildings",
            "description": "Одним из интереснейших архитектурных памятников города является здание, которое в прошлом принадлежало пансиону Мариинского женского училища. Оно было построено в конце XIX века, приблизительно в 1877 году по проекту архитектора Э. А. Бруна. Первоначально здание использовалось как приходская школа. Позднее, в начале XX века, примерно в 1901-1903 годах, здание было перестроено и преобразовано в женскую гимназию с пансионом",
            "image": "https://upload.wikimedia.org/wikipedia/commons/2/2c/Fergana_oblast_building.jpg",
            "name": "Здание женской гимназии",
            "url": "https://example.com/ru/heritage/zhenskaya-gimnaziya",
          },
          "position": 2,
        },
        {
          "@type": "ListItem",
          "item": {
            "@type": "LandmarksOrHistoricalBuildings",
            "description": "Православная часовня, построенная в конце XIX века в русско-византийском стиле, ставшая важным архитектурным символом города. Часовня возведена из жженого кирпича, сохранила элементы классического храмового зодчества, отличается бело-розовыми тонами оформления, наличием открытых галерей и шатрового крыльца",
            "image": "https://upload.wikimedia.org/wikipedia/commons/2/2c/Fergana_oblast_building.jpg",
            "name": "Часовня во имя Святого благоверного князя Александра Невского",
            "url": "https://example.com/ru/heritage/chasovnya-aleksandra-nevskogo",
          },
          "position": 3,
        },
        {
          "@type": "ListItem",
          "item": {
            "@type": "LandmarksOrHistoricalBuildings",
            "description": "Архитектурное сооружение конца XIX — начала XX столетия, гарнизонный дом офицеров, построенный в стиле эклектики с элементами раннего русского классицизма.",
            "image": "https://upload.wikimedia.org/wikipedia/commons/2/2c/Fergana_oblast_building.jpg",
            "name": "Здание военного собрания (Дом офицеров)",
            "url": "https://example.com/ru/heritage/zdanie-voennogo-sobraniya-dom-oficerov",
          },
          "position": 4,
        },
        {
          "@type": "ListItem",
          "item": {
            "@type": "LandmarksOrHistoricalBuildings",
            "description": "Архитектурное сооружение конца XIX — начала XX столетия, военно-административный центр Нового Маргилана (ныне Фергана), построенное в стиле эклектики с элементами раннего русского классицизма.",
            "image": "https://upload.wikimedia.org/wikipedia/commons/f/f0/Fergana_Oblast_Administration.jpg",
            "name": "Здание военного губернатора",
            "url": "https://example.com/ru/heritage/gubernatorskiy-dom",
          },
          "position": 5,
        },
        {
          "@type": "ListItem",
          "item": {
            "@type": "LandmarksOrHistoricalBuildings",
            "description": "Памятник архитектуры начала XX века, построенный по проекту архитектора Г. М. Сваричевского. Здание отличается строгой симметрией, монументальными формами и элементами «кирпичного стиля» модерна. Центральную часть фасада выделяют крупные полуциркульные окна и выступающий объём. Сегодня в здании располагается административный корпус Ферганского государственного университета.",
            "image": "https://upload.wikimedia.org/wikipedia/commons/2/2c/Fergana_oblast_building.jpg",
            "name": "Здание мужской гимназии",
            "url": "https://example.com/ru/heritage/muzhskaya-gimnaziya",
          },
          "position": 6,
        },
      ],
      "name": "Project",
      "numberOfItems": 6,
    },
  ],
}
`;

exports[`seo snapshots > matches structured data snapshots for ru and uz > home-jsonld-uz 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@id": "https://example.com/#organization",
      "@type": "Organization",
      "name": "Project",
      "url": "https://example.com",
    },
    {
      "@id": "https://example.com/#website",
      "@type": "WebSite",
      "description": "D",
      "inLanguage": "uz",
      "name": "Project",
      "publisher": {
        "@id": "https://example.com/#organization",
      },
      "url": "https://example.com",
    },
    {
      "@id": "https://example.com/uz#webpage",
      "@type": "WebPage",
      "description": "D",
      "inLanguage": "uz",
      "isPartOf": {
        "@id": "https://example.com/#website",
      },
      "mainEntity": {
        "@id": "https://example.com/uz#heritage-itemlist",
      },
      "name": "Project",
      "publisher": {
        "@id": "https://example.com/#organization",
      },
      "url": "https://example.com/uz",
    },
    {
      "@id": "https://example.com/uz#heritage-itemlist",
      "@type": "ItemList",
      "itemListElement": [
        {
          "@type": "ListItem",
          "item": {
            "@type": "LandmarksOrHistoricalBuildings",
            "description": "Ayni paytda bino Toshkent va Oʻzbekiston yeparxiyasining pravoslav cherkovi boʻlib xizmat qilmoqda. U Farg‘ona vodiysining asosiy ma’naviy markazlaridan biri bo‘lib qolgan holda liturgik, yodgorlik, ma’rifiy va jamoat vazifalarini bajaradi. Ilgari bino Lyuteran cherkovi vazifasini bajargan, sovet davrida esa vaqtinchalik asl maqsadi uchun emas, balki ombor sifatida foydalanilgan",
            "image": "https://cdn.ruwiki.ru/commonswiki/files/thumb/5/55/Church_of_St._Sergiuy_Radonezhkogo_in_Fergana_02-01.jpg/600px-Church_of_St._Sergiuy_Radonezhkogo_in_Fergana_02-01.jpg",
            "name": "Muqaddas Sergiy Radonejskiy cherkovi",
            "url": "https://example.com/uz/heritage/khram-sergiya-radonezhskogo",
          },
          "position": 1,
        },
        {
          "@type": "ListItem",
          "item": {
            "@type": "LandmarksOrHistoricalBuildings",
            "description": "Shaharning eng qiziqarli me'moriy yodgorliklaridan biri - ilgari Mariinskiy qizlar maktabining internat maktabi joylashgan bino. U 19-asr oxirida, taxminan 1877 yilda me'mor E. A. Brunoning loyihalariga ko'ra qurilgan. Dastlab, bino cherkov maktabi sifatida xizmat qilgan. Keyinchalik, 20-asrning boshlarida, taxminan 1901-1903 yillarda bino rekonstruksiya qilinib, qizlar gimnaziyasi va internat maktabiga aylantirildi.",
            "image": "https://upload.wikimedia.org/wikipedia/commons/2/2c/Fergana_oblast_building.jpg",
            "name": "Qizlar gimnaziyasi binosi",
            "url": "https://example.com/uz/heritage/zhenskaya-gimnaziya",
          },
          "position": 2,
        },
        {
          "@type": "ListItem",
          "item": {
            "@type": "LandmarksOrHistoricalBuildings",
            "description": "19-asr oxirida rus-Vizantiya uslubida qurilgan pravoslav soatxonasi shaharning muhim me'moriy ramziga aylandi. Pishirilgan g'ishtdan qurilgan, klassik ibodatxona me'morchiligi elementlarini saqlagan, pushti va oq bezak, ochiq galereyalar va chodirli ayvonga ega.",
            "image": "https://upload.wikimedia.org/wikipedia/commons/2/2c/Fergana_oblast_building.jpg",
            "name": "Muqaddas muborak shahzoda Aleksandr Nevskiy nomidagi cherkov",
            "url": "https://example.com/uz/heritage/chasovnya-aleksandra-nevskogo",
          },
          "position": 3,
        },
        {
          "@type": "ListItem",
          "item": {
            "@type": "LandmarksOrHistoricalBuildings",
            "description": "XIX asr oxiri va XX asr boshlariga mansub me’moriy inshoot — ofitserlar garnizon uyi, ilk rus klassitsizmi elementlari bilan eklektika uslubida qurilgan.",
            "image": "https://upload.wikimedia.org/wikipedia/commons/2/2c/Fergana_oblast_building.jpg",
            "name": "Harbiy yig'ilish binosi (Ofitserlar uyi)",
            "url": "https://example.com/uz/heritage/zdanie-voennogo-sobraniya-dom-oficerov",
          },
          "position": 4,
        },
        {
          "@type": "ListItem",
          "item": {
            "@type": "LandmarksOrHistoricalBuildings",
            "description": "XIX asr oxiri va XX asr boshlariga oid me’moriy bino — Yangi Marg‘ilon (hozirgi Farg‘ona) harbiy-ma’muriy markazi, ilk rus klassitsizmi elementlari bilan eklektika uslubida qurilgan.",
            "image": "https://upload.wikimedia.org/wikipedia/commons/f/f0/Fergana_Oblast_Administration.jpg",
            "name": "Harbiy gubernator qarorgohi binosi",
            "url": "https://example.com/uz/heritage/gubernatorskiy-dom",
          },
          "position": 5,
        },
        {
          "@type": "ListItem",
          "item": {
            "@type": "LandmarksOrHistoricalBuildings",
            "description": "XX asr boshlariga oid me’moriy yodgorlik bo‘lib, me’mor G. M. Svarichevskiy loyihasi asosida qurilgan. Bino qat’iy simmetriyasi, mahobatli shakllari hamda modern uslubining «g‘ishtli uslubi» elementlari bilan ajralib turadi. Fasadning markaziy qismi yirik yarim doira shaklidagi derazalar va oldinga chiqib turgan hajm bilan bezatilgan. Hozirgi kunda binoda Farg‘ona davlat universitetining ma’muriy korpusi joylashgan.",
            "image": "https://upload.wikimedia.org/wikipedia/commons/2/2c/Fergana_oblast_building.jpg",
            "name": "Erkaklar gimnaziyasi binosi",
            "url": "https://example.com/uz/heritage/muzhskaya-gimnaziya",
          },
          "position": 6,
        },
      ],
      "name": "Project",
      "numberOfItems": 6,
    },
  ],
}
`;
